# gmail-automation-tool

./: .env  README.md  agent.py  auth.py  basic_pr.txt  chroma_l.py  main.py  messaging.py  pr.env  pyproject.toml  req.txt  server.py  spam.txt  tasks.txt
gmail_db/: chroma.sqlite3
