[project]
name = "gmail7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "fastmcp>=3.4.1",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
]
